# Distributed-SMB

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.gameevents  Dockerfile.lobby  LICENSE  README.md  build_bundle.sh  docker-compose.yml  main.spec  pyproject.toml  session_metadata.json  setup.bat  setup.sh
.github/workflows/: build.yml  code_quality_&_tests.yml
src/: app.py
src/distributed_smb/: __init__.py  main.py  test_game.py
src/distributed_smb/application/: __init__.py  client_gameplay.py  election_mixin.py  game_event_dispatcher.py  host_gameplay.py  lobby_coordinator.py  node_controller.py  protocols.py  recovery_mixin.py
src/distributed_smb/domain/: __init__.py  collisions.py  election.py  entity.py  events.py  game_engine.py  lifecycle.py  messages.py  physics.py  player.py  session.py  (+4 more)
tests/: conftest.py  test_engine.py  test_entity.py  test_main_recovery.py  test_messages.py  test_paths.py  test_placeholder.py  test_prediction.py  test_renderer.py  test_roster.py  test_session.py  test_session_metadata.py  test_shadow_copy.py  test_world.py
tests/application/: test_election.py  test_election_mixin.py  test_env_state_buffer.py  test_host_gameplay.py  test_lobby_phase.py  test_node_controller.py  test_prediction_integration.py  test_recovery_mixin.py  test_recovery_prober.py  test_shadow_copy_integration.py
tests/integration/: test_game_events.py  test_host_migration.py  test_localhost.py  test_session_recovery.py
tests/network/: test_artificial_latency.py  test_discovery.py  test_lobby_service.py  test_serializer.py  test_ws_handler.py
(+45 files in other folders)
